--- a/font-end/src/App.css
+++ b/font-end/src/App.css
@@ -28,6 +28,10 @@ body {
 .demo-logo-vertical {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.2);
+  background: #ffffff33;
   border-radius: 6px;
+}
+
+.hover-text:hover {
+  color: #1677ff; /* Đổi màu sắc khi hover */
 }
